<resources>
    <string name="Environment">Environment</string>

    <string-array name="mucdo">
        <item>Nghiêm Trọng</item>
        <item>Khá Nghiêm Trọng</item>
        <item>Chưa Tốt</item>
        <item>Bình Thường</item>
        <item>Tốt</item>


    </string-array>

    <string-array name="mapTpe">
        <item> Roadmap </item>
        <item> Satellite  </item>
        <item> Hybrid  </item>
        <item> Terrain  </item>
        <item> None  </item>


    </string-array>
    <string-array name="quan">
        <item>Quận 1</item>
        <item>Quận 12</item>
        <item>Quận Thủ Đức</item>
        <item>Quận 9</item>
        <item>Quận Gò Vấp</item>
        <item>Quận Bình Thạnh</item>
        <item>Quận Tân Bình</item>
        <item>Quận Tân Phú</item>
        <item>Quận Phú Nhuận</item>
        <item>Quận 2</item>
        <item>Quận 3</item>
        <item>Quận 10</item>
        <item>Quận 11</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 8</item>
        <item>Quận Bình Tân</item>
        <item>Quận 7</item>
        <item>Huyện Củ Chi</item>
        <item>Huyện Hóc Môn</item>
        <item>Huyện Bình Chánh</item>
        <item>Huyện Nhà Bè</item>
        <item>Huyện Cần Giờ</item>
    </string-array>


    <string-array name="duong">
        <item>Alexandre de Rhodes</item>
        <item>Bà Lê Chân</item>
        <item>Bùi Thị Xuân</item>
        <item>Bùi Viện</item>
        <item>Cách Mạng Tháng Tám</item>
        <item>Calmette</item>
        <item>Cao Bá Nhạ</item>
        <item>Cao Bá Quát</item>
        <item>Cô Bắc</item>
        <item>Cô Giang</item>
        <item>Cống Quỳnh</item>
        <item>Chu Mạnh Trinh</item>
        <item>Chương Dương</item>
        <item>Đặng Dung</item>
        <item>Đặng Tất</item>
        <item>Đặng Thị Nhu</item>
        <item>Đặng Trần Côn</item>
        <item>Đề Thám</item>

        <item>Đinh Công Tráng</item>
        <item>Đông Du</item>

        <item>Đồng Khởi</item>

        <item>Hai Bà Trưng</item>


        <item>Hải Triều</item>
        <item>Hàm Nghi</item>


        <item>Hàn Thuyên</item>

        <item>Hòa Mỹ</item>

        <item>Hồ Hảo Hớn</item>

        <item>Hồ Huấn Nghiệp</item>
        <item></item>
        <item>Hồ Tùng Mậu</item>


        <item>Hoàng Sa</item>
        <item>Huyền Quang</item>
        <item>Huyền Trân Công Chúa</item>
        <item>Huỳnh Khương Ninh</item>

        <item>Huỳnh Thúc Kháng</item>


        <item>Ký Con</item>

        <item>Lê Anh Xuân</item>
        <item>Lê Công Kiều</item>
        <item>Lê Duẩn</item>
        <item>Lê Lai</item>
        <item>Lê Lợi</item>
        <item>Lê Thánh Tôn</item>


        <item>Lê Thị Hồng Gấm</item>
        <item>Lê Thị Riêng</item>
        <item>Lê Văn Hưu</item>
        <item>Lương Hữu Khánh</item>

        <item>Lưu Văn Lang</item>
        <item>Lý Tự Trọng</item>
        <item></item>
        <item>Lý Văn Phức</item>
        <item>Mã Lộ</item>
        <item>Mạc Đĩnh Chi</item>

        <item>Mạc Thị Bưởi</item>

        <item>Mai Thị Lựu</item>
        <item>Nam Kỳ Khởi Nghĩa</item>

        <item>Nam Quốc Cang</item>
        <item>Ngô Đức Kế</item>
        <item>Ngô Văn Năm</item>
        <item>Nguyễn Bỉnh Khiêm</item>
        <item>Nguyễn Cảnh Chân</item>
        <item>Nguyễn Công Trứ</item>
        <item>Nguyễn Cư Trinh</item>
        <item>Nguyễn Du</item>
        <item>Nguyễn Đình Chiểu</item>
        <item>Nguyễn Huệ</item>
        <item>Nguyễn Hữu Cảnh</item>
        <item>Nguyễn Hữu Cầu</item>
        <item>Nguyễn Huy Tự</item>
        <item>Nguyễn Khắc Nhu</item>
        <item>Nguyễn Phi Khanh</item>
        <item>Nguyễn Thái Bình</item>
        <item>Bà Huyện Thanh Quan</item>
        <item></item>
        <item>Bàn Cờ</item>
        <item>Cách Mạng Tháng Tám</item>
        <item>Cao Thắng</item>
        <item>Điện Biên Phủ</item>
        <item>Đoàn Công Bửu</item>
        <item>Hai Bà Trưng</item>
        <item>Hồ Xuân Hương</item>
        <item>Huỳnh Tịnh Của</item>
        <item>Kỳ Đồng</item>
        <item>Lê Ngô Cát</item>
        <item>Lê Quý Đôn</item>
        <item>Nguyễn Văn Trỗi</item>
        <item>Lê Văn Sỹ</item>
        <item>Lý Chính Thắng</item>
        <item>Lý Thái Tổ</item>
        <item>Cao Thắng</item>
        <item>Cầm Bá Thước</item>
        <item>Cô Bắc</item>
        <item>Cô Giang</item>
        <item>Chiến Thắng</item>
        <item>Duy Tân</item>
        <item>Đào Duy Anh</item>
        <item>Đào Duy Từ</item>
        <item>Đặng Thai Mai</item>
        <item>Đặng Văn Ngữ</item>
        <item>Đoàn Thị Điểm</item>
        <item>Đỗ Tấn Phong</item>
        <item>Hải Nam</item>
        <item>Hoàng Diệu</item>
        <item>Hoàng Minh Giám</item>
        <item>Hoàng Văn Thụ</item>
        <item>Hồ Biểu Chánh</item>
        <item>Hồ Văn Huê</item>
        <item>Huỳnh Văn Bánh</item>
        <item>Lam Sơn</item>
        <item>Lê Quý Đôn</item>
        <item>Nguyễn Văn Trỗi</item>
        <item>Lê Văn Sỹ</item>
        <item>Mai Văn Ngọc</item>
        <item>Ngô Thời Nhiệm</item>
        <item>Nguyễn Đình Chiểu</item>
        <item>Nguyễn Đình Chính</item>
        <item>Nguyễn Kiệm</item>
        <item>Nguyễn Thị Huỳnh</item>
        <item>Nguyễn Trọng Tuyển</item>
        <item>Nguyễn Trường Tộ</item>
        <item>Nguyễn Văn Đậu</item>
        <item>Nam Kỳ Khởi Nghĩa</item>
        <item>Nguyễn Văn Trỗi</item>
        <item>Nhiêu Tứ</item>
        <item>Phan Đăng Lưu</item>
        <item>Phan Đình Phùng</item>
        <item>Phan Tây Hồ</item>
        <item>Phan Xích Long</item>
        <item>Phổ Quang</item>
        <item>Thích Quảng Đức</item>
        <item>Trần Cao Vân</item>
        <item>Trần Huy Liệu</item>
        <item>Trần Hữu Trang</item>
        <item>Trần Kế Xương</item>
        <item>Trần Khắc Chân</item>
        <item>Trần Văn Đang</item>
        <item>Trương Quốc Dung</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="onhie_m">Pollution</string>
    <string name="k_t_xe">Traffic Jam</string>
    <string name="nh_p_t_n_duong">Street</string>
    <string name="nh_p_khu_v_c">Area</string>
    <string name="m_c">Level</string>
    <string name="th_i_gian">Time</string>
    <string name="ng_y_th_ng">Date</string>


    =======
    <string name="app_name">Final</string>
    <string name="forget_password"><u>Forgot Password</u></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_report">Report</string>
    <string name="your_password">Your Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_username">Your Username</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="accepting_our_licences">Accepting our licences</string>
    <string name="infomation">Infomation</string>
    <string name="person">Person</string>
    <string name="news">News</string>
    <string name="post">Post</string>
    <string name="hello_world">Hello World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="input_email">Enter email address!</string>
    <string name="input_password">Enter password!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="sign_up_fail">Sign Up Fail</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="send_email_to_change_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions</string>
    <string name="email_send_fail">Send Email Failed</string>
    <string name="nav_change_email">Change Email</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_change_language">Change Language</string>
    <string name="nav_your_grade">Your Grade</string>
    <string name="group_nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">setting</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_update">Update</string>
    <string name="menu_search">Search</string>
    <string name="nav_user_setting">Change User Information</string>
    <string name="delete_User_success">Your profile is deleted:( Create a account now!</string>
    <string name="delete_User_fail">Failed to delete your account!</string>
    <string name="enter_email">Enter email</string>
    <string name="reset_email_fail">Failed to send reset email!</string>
    <string name="reset_email_success">Reset password email is sent!</string>
    <string name="enter_password">Enter password</string>
    <string name="update_pass_fail">Failed to update password!</string>
    <string name="update_pass_success">Password is updated, sign in with new password!</string>
    <string name="update_email_fail">Failed to update email!</string>
    <string name="update_email_success">Email address is updated. Please sign in with new email id!</string>
    <string name="SSA_Error">Loi Xu Ly SSA</string>
    <string name="nav_history">History</string>
    <string name="web_client_id">Include your web client id here</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_news">News</string>
    <string name="nav_map">Map</string>
    <string name="queston_yes">Yes</string>
    <string name="question_No">No</string>
    <string name="Note">Note</string>
    <string name="question_delete_user">Are you really want to delete this user?</string>
</resources>
