<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_setting"
            android:icon="@mipmap/ic_choice"
            android:title="@string/nav_user_setting" />
        <item
            android:id="@+id/nav_change_language"
            android:icon="@mipmap/ic_choice"
            android:title="@string/nav_change_language" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_choice"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_grade"
            android:icon="@mipmap/ic_choice"
            android:title="@string/nav_your_grade" />
    </group>

    <item android:title="@string/group_nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_choice"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@mipmap/ic_choice"
                android:title="@string/nav_sign_out" />

        </menu>
    </item>

</menu>
