<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
<item
    android:title="@string/menu_setting"
    android:icon="@mipmap/ic_seting"
    android:id="@+id/mnSetting"
    >
</item>
    <item
        android:title="@string/menu_update"
        app:showAsAction="always"
        android:id="@+id/mnUpdate"
        ></item>


    <item
        android:title="@string/menu_search"
        android:icon="@mipmap/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:id="@+id/mnSearch"
        ></item>

    <item
        android:title="@string/menu_contact"
        android:icon="@mipmap/ic_heart"
        app:showAsAction="ifRoom"
        android:id="@+id/mncontact"
        ></item>


</menu>
