<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00993C"
    >

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="445dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radONhiem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/onhie_m" />

                    <RadioButton
                        android:id="@+id/radKetXe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/k_t_xe" />

                </RadioGroup>

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/nh_p_t_n_duong" />

                <AutoCompleteTextView
                    android:id="@+id/autoDuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/nh_p_khu_v_c" />

                <Spinner
                    android:id="@+id/spKhuVuc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/m_c" />

                <Spinner
                    android:id="@+id/spMucDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/th_i_gian" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtTime"
                        android:layout_width="288dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="time" />

                    <ImageButton
                        android:id="@+id/btnTime"
                        android:layout_width="wrap_content"
                        android:layout_height="39dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/ic_time" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/ng_y_th_ng" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/txtDate"
                        android:layout_width="288dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.13"
                        android:ems="10"
                        android:inputType="time" />

                    <ImageButton
                        android:id="@+id/btnDate"
                        android:layout_width="46dp"
                        android:layout_height="41dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/ic_calendar" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btnGui"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="#00B041"
        android:text="Submit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
